--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,16 @@
+lugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - CONTRIBUTING.md
+  - README.md
+  - LICENSE.md
+  - COPYING.md
+  - CODE_OF_CONDUCT.md
+  - CONTRIBUTING.md
+  - ISSUE_TEMPLATE.md
+  - PULL_REQUEST_TEMPLATE.md
+title: liuxuhelloworld's notebook
 theme: jekyll-theme-cayman
