--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,4 @@ include:
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
 title: liuxuhelloworld's notebook
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
